# StockWatchBoard

./: .gitignore  .replit  JitenStockOptionValuation.ipynb  OptionPremiumScanner.py  README.md  StreamStOption.bat  app.py  database.py  news_fetcher.py  news_simulator.py  option_premiums.csv  options_analyzer.py  portfolio_optimizer.py  pyproject.toml  replit.md  requirements.txt  sentiment_analyzer.py  stock_fetcher.py  xlsx-to-parquet  xlsx_to_parquet.py
