[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "google-auth>=2.40.3",
    "google-cloud-bigquery>=3.34.0",
    "numpy>=2.2.6",
    "openai>=1.84.0",
    "pandas>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "streamlit>=1.45.1",
    "trafilatura>=2.0.0",
    "yfinance>=0.2.61",
]
